include $(top_srcdir)/globus_automake_pre
include $(top_srcdir)/globus_automake_pre_top

SUBDIRS = pkgdata doxygen

setup_SCRIPTS = \
    cobalt.in \
    find-cobalt-tools \
    setup-globus-job-manager-cobalt \
    setup-globus-job-manager-cobalt.pl

EXTRA_DIST = $(setup_SCRIPTS) globus_gram_job_manager_cobalt.dox

include $(top_srcdir)/globus_automake_post
include $(top_srcdir)/globus_automake_post_top
