dnl

AC_REVISION($Revision: 0.11 $)
AC_INIT(Makefile.am)

GLOBUS_INIT

AM_PROG_LIBTOOL

dnl config header goes here

dnl Initialize the automake rules the last argument
AM_INIT_AUTOMAKE($GPT_NAME, $GPT_VERSION)


AC_ARG_WITH([service-name],[  --with-service-name=NAME        Globus jobmanager name (default: jobmanager-cobalt)],
if test x"$withval" != "yes" ; then
Cobalt_SETUP_FLAGS="$Cobalt_SETUP_FLAGS --service-name=$withval"
fi
,
)

AC_ARG_WITH([mpi-pe],[  --with-mpi-pe=NAME      Default Parallel Environment for execution of MPI jobs],
Cobalt_SETUP_FLAGS="$Cobalt_SETUP_FLAGS --mpi-pe=$withval"
,
)

AC_ARG_WITH([queue-validation],[  --with-queue-validation Create RVF file with the available queues],
Cobalt_SETUP_FLAGS="$Cobalt_SETUP_FLAGS --validate-queues"
,
)

AC_ARG_WITH([pe-validation],[  --with-pe-validation    Create RVF file with available parallel environments],
Cobalt_SETUP_FLAGS="$Cobalt_SETUP_FLAGS --validate-pes"
,
)

AC_ARG_ENABLE([sunmpi],[  --disable-sunmpi        Ignores Sun MPI],
Cobalt_SETUP_FLAGS="$Cobalt_SETUP_FLAGS --disable-sunmpi"
,
)

LAC_DOXYGEN("../", "*.dox")

GLOBUS_FINALIZE

dnl Set setup time flags
AC_SUBST(Cobalt_SETUP_FLAGS,$Cobalt_SETUP_FLAGS)

AC_OUTPUT(
	Makefile
	setup-globus-job-manager-cobalt
	pkgdata/Makefile
	pkgdata/pkg_data_src.gpt
	doxygen/Makefile
	doxygen/Doxyfile
	doxygen/Doxyfile-internal
)

chmod 755 setup-globus-job-manager-cobalt
